# termux-launcher

./: .gitignore  .gitmodules  CHANGELOG.md  LICENSE-BSD-2-CLAUSE  LICENSE-EXCEPTIONS.md  LICENSE-LAWNCHAIR-APACHE-2.0  LICENSE-REALTIMEBLURVIEW  LITE.md  README.md  THIRD_PARTY_NOTICES.md  build.gradle  checksums-sha256.txt  settings.gradle
.artifacts/: tombstone_18.txt
.artifacts/tai-handoff/: TAI Settings Wireframes.dc.html  models.yaml
.github/patches/: llama-android-vulkan-loader.patch
.github/scripts/: apply_vaj_identity.sh  build_mlc_android.sh  gradle_retry.sh  prepare_mlc_android.sh
.github/templates/: mlc4j.build.gradle
.github/workflows/: attach_debug_apks_to_release.yml  build_bootstrap.yml  build_mnn_native.yml  build_mnn_native.yml.disabled  debug_build.yml  release_vaj.yml  run_tests.yml  standalone_build.yml
.omo/drafts/: mlc-llm-backend-settings.md
.omo/evidence/: task-11-download-rejection.txt  task-11-github-actions-gate.txt  task-11-lan-safety.txt  task-11-local-endpoint.txt  task-11-mlc-unavailable.txt
app/: build.gradle  proguard-rules.pro
app/src/main/cpp/: CMakeLists.txt  tai_llama_jni.cpp  tai_llama_stub.cpp
ci/mnn-patch/: embedding_jni.cpp  (+1 more)
docs/: example-prompts.md  tui.txt
mlc-package/: mlc-package-config.json
native/launcher-perf/: Cargo.toml  README.md  build-android.sh
native/launcher-perf/src/: lib.rs
project-docs/: release-draft-v0.2.3.md  release-notes-v0.2.22.md
scripts/: dev-install.sh
termux-am-library/: build.gradle
termux-shared/: build.gradle
work-logs/: accessory-render-stabilization-tracker.md
(+424 files in other folders)
