cmake_minimum_required(VERSION 3.22.1)
project(tai_native LANGUAGES C CXX)

set(CMAKE_CXX_STANDARD 17)
set(CMAKE_CXX_STANDARD_REQUIRED ON)

if(ANDROID_ABI STREQUAL "arm64-v8a")
    set(LLAMA_BUILD_COMMON OFF CACHE BOOL "" FORCE)
    set(LLAMA_BUILD_TESTS OFF CACHE BOOL "" FORCE)
    set(LLAMA_BUILD_EXAMPLES OFF CACHE BOOL "" FORCE)
    set(LLAMA_BUILD_SERVER OFF CACHE BOOL "" FORCE)
    set(GGML_NATIVE OFF CACHE BOOL "" FORCE)
    set(GGML_OPENMP OFF CACHE BOOL "" FORCE)
    set(GGML_VULKAN ON CACHE BOOL "" FORCE)
    add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/../../../../third-party/llama.cpp llama.cpp)
    add_library(tai_llama SHARED tai_llama_jni.cpp)
    target_include_directories(tai_llama PRIVATE ${CMAKE_CURRENT_SOURCE_DIR}/../../../../third-party/llama.cpp/include)
    target_link_libraries(tai_llama PRIVATE llama android log)
else()
    add_library(tai_llama SHARED tai_llama_stub.cpp)
endif()
